# sighthound

./: .env.example  .gitignore  Cargo.toml  FINAL_PAPER_STATUS.txt  FRONTEND_TOOL_README.md  FWDC_COMPLETION_SUMMARY.txt  QUICKSTART.md  README.md  README_ENGINE.md  ULTIMATE_ENHANCED_VALIDATION_FRAMEWORK.py  ULTIMATE_VALIDATION_SYNTHESIS.md  WEB_TOOL_README.md  build_hybrid.sh  demo_autobahn_integration.py  demo_comprehensive_validation.py  demo_rust_autobahn.py  execute_ultimate_validation.py  experimental_validation_framework.py  generate_panels.py  package.json  pyproject.toml  requirements.txt  run_validation_demo.py  setup.py  validation_experiments.py  validation_results.json  web_tool.py
.claude/: settings.local.json
actigraphy/: posture.py  power_curve.py
atmospheric/: aerodynamics.py  oxygen_uptake_rate.py
biomechanics/: dynamics.py  equivalent_slope.py  gait_cycle.py  inverse.py  kinematics.py  muscle.py  surface.py
cardiography/: signal_processing.py
config/: autobahn_config.yaml  sighthound.yaml
core/: api.py  autobahn_integration.py  bayesian_analysis_pipeline.py  cli.py  data_loader.py  dubins_path.py  dynamic_filtering.py  dynamic_filtering_rust.py  error_handler.py  exporters.py  optimal_path.py  rust_autobahn_bridge.py  rust_bridge.py
cynegeticus/: README.md  package.json  tsconfig.json
demo/: ENHANCED_PATH_RECONSTRUCTION_VALIDATION.md  EXPERIMENTAL_VALIDATION_SUMMARY.md  ULTIMATE_ENHANCED_VALIDATION_FRAMEWORK.py  ULTIMATE_VALIDATION_SYNTHESIS.md  VALIDATION_METHODOLOGY.md
docs/: autonomous-vehicles.tex  black-sea.tex  path-reconstruction.md  satellite-temporal.md  sighthound.tex  smart-watch.tex  tasks.md  temporal-information-database.md  universal-signal-database.md  user_guide.md
docs/foundation/: activity-sleep-oscillatory-mirror-theory.tex  allometric-oscillatory-coupling.tex  ambigous-compression.tex  atmospheric-biological-coupling.tex  complete-universal-framework.tex  heart-rate.tex  locomotor.tex  mathematical-necessity.tex  oscillatory-coupling-neuroscience.tex  physical-necessity.tex  surface-compliance-oscillatory-coupling.tex  technological-biological.tex  unified-biological-oscillations.tex
docs/publication/: sighthound-geopositioning.tex
federation/: continuous_learning.py  fusion.py  state.py
moriarty/: .env.local.example  .gitignore  BUILD_SUMMARY.md  COMPILER_AND_DEPENDENCIES.md  DEPENDENCIES_UPDATE.md  GLB_MODEL_SETUP.md  INSTALL_DEPENDENCIES.md  INTEGRATION_CHECKLIST.md  QUICK_START.md  SANDBOX_README.md  SANDBOX_SCRIPTS_SETUP.md  SANDBOX_SETUP.md  SCRIPT_8_INTEGRATION.md  SETUP.md  package-lock.json  package.json  sandbox.md  silk-structure.md  tsconfig.json  vercel.json
moriarty/docs/: INPIXEL_POSITIONING_FRAMEWORK.md  VALIDATION_SUMMARY.md
moriarty/public/: globes.html
moriarty/validation/: CELESTIAL_VALIDATION_SUMMARY.md  DELIVERY_SUMMARY.txt  INDEX.md  PANELS_DOCUMENTATION.md  README.md  README_FWDC.md  VALIDATION_SUMMARY.md  celestial_positioning_experiments.py  celestial_positioning_results.json  fwdc_algorithm.py  fwdc_analysis.py  fwdc_experiments.py  fwdc_validation_analysis.json  fwdc_validation_report.html  fwdc_validation_results.json  generate_celestial_panels.py  generate_panels.py  validation_experiments.py  validation_results.json
parsers/: __init__.py  base_parser.py  fit_parser.py  gpx_parser.py  kml_parser.py  tcx_parser.py
pipeline/: main.py  sighthound.py
public/: 8716659574_ACTIVITY.fit  OutdoorRun20220427174453.gpx  OutdoorRun20220909181633.tcx  TrackRun20220204183213.fit  activity.czml  merged_data.json  puchheim_sighthound.geojson
public/olympics/: 400m_athletes_complete_biometrics.json  400m_athletes_raw.json  continent_averages.json  decomposition_results.json  environment_analysis_results.json  fourhundred_medal_analysis_results.json  kalman_filter_results.json  merged_olympics_country_info.json  merged_output.json  normalized_metrics.json  olympic_400m_age_analysis.json  olympic_400m_analysis_20241115_040822.json  olympic_400m_model.joblib  olympic_400m_physio_analysis_20241126_003701.json  olympic_400m_rankings.json  olympic_400m_scaler.joblib  olympic_continental_400m_analysis.json  olympic_effective_score_analysis_results.json  olympic_socio_economic_analysis_20241126_003927.json  olympics.json  olympics_lane_correction.json  paris_olympics.json  processed_athlete_data_with_predictions.json  race_analysis_20241114_020450.json  scientific_llm_trainer.py  sprint_performance_model.js  sprint_performance_model.py  wind_altitude_effect_results.json
sighthound/: convert_to_geojson.py  czml_generator.py  data_processing.py  dubins_path.py  dynamic_filtering.py  location_probability_density.py  optimal_path.py  pipeline.py  triangulation.py  visualization.py  weather.py
sighthound-autobahn/: Cargo.toml
sighthound-autobahn/src/: lib.rs
sighthound-bayesian/: Cargo.toml
sighthound-bayesian/src/: lib.rs
sighthound-core/: Cargo.toml
sighthound-core/src/: lib.rs
sighthound-filtering/: Cargo.toml
sighthound-filtering/src/: lib.rs
sighthound-fuzzy/: Cargo.toml
sighthound-fuzzy/src/: lib.rs
sighthound-triangulation/: Cargo.toml
sighthound-triangulation/src/: lib.rs
sighthound_validation_engine/: __init__.py  validation_engine.py
sighthound_validation_engine/analysis/: __init__.py  biometric_correlator.py
sighthound_validation_engine/core/: __init__.py  path_reconstruction.py  virtual_spectroscopy.py  weather_simulation.py
sighthound_validation_engine/data_processing/: __init__.py  olympic_data_loader.py
silk/: functionality.md
static/: app.js  style.css
templates/: index.html  reachable_region.html  satellite_visibility.html  shortest_path.html
utils/: __init__.py  cell_triangulation.py  coordinates.py  czgeneration.py  czml_generator.py  data_fusion.py  geojson_generator.py  memory_optimizer.py  parallel.py  probability.py  profiler.py  profiler_visualizer.py  triangulation.py  weather.py
validation/: IMPLEMENTATION_SUMMARY.md  README.md  generate_figures.py  run_validation.py
visualizations/: dashboard.py  visualization.py  web_interface.py
(+223 files in other folders)
