[workspace]
members = [
    "sighthound-core",
    "sighthound-filtering", 
    "sighthound-triangulation",
    "sighthound-geometry",
    "sighthound-optimization",
    "sighthound-fusion",
    "sighthound-bayesian",
    "sighthound-fuzzy",
    "sighthound-autobahn"
]

[workspace.dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = { version = "0.15", features = ["rayon", "serde"] }
rayon = "1.8"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
num-traits = "0.2"
approx = "0.5"
geo = "0.27"
geo-types = "0.7"
rstar = "0.11"  # Spatial indexing
kiddo = "4.2"   # Fast k-d tree
spade = "2.4"   # Spatial data structures
concurrency-kit = "0.1"
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false 