[package]
name = "sighthound-fuzzy"
version = "0.1.0"
edition = "2021"

[lib]
name = "sighthound_fuzzy"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
numpy.workspace = true
ndarray.workspace = true
nalgebra.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
mimalloc.workspace = true
dashmap.workspace = true
crossbeam.workspace = true
sighthound-core = { path = "../sighthound-core" }
sighthound-bayesian = { path = "../sighthound-bayesian" }

[dependencies.optimization]
version = "0.2"

[dependencies.rand]
version = "0.8"
features = ["std_rng"]

[dependencies.statrs]
version = "0.16"

[dependencies.argmin]
version = "0.8"
features = ["serde1"]

[dependencies.linfa]
version = "0.7"
features = ["serde"]

[dependencies.smartcore]
version = "0.3"
features = ["serde"] 